# CMath

./: CMakeLists.txt  CompMath.pro  LAbsTabs.cpp  LAbsTabs.h  last_tab.qml  main.cpp  styles.scss
algos/: ApproximationSolver.cpp  ApproximationSolver.h  IntegrationSolver.cpp  IntegrationSolver.h  InterpolationSolver.cpp  InterpolationSolver.h  LinearSystemSolver.cpp  LinearSystemSolver.h  ODESolver.cpp  ODESolver.h
gui/: ApproximationTab.cpp  ApproximationTab.h  IntegrationTab.cpp  IntegrationTab.h  InterpolationTab.cpp  InterpolationTab.h  LAbsTabs.cpp  LAbsTabs.h  LabsTabs.cpp  LabsTabs.h  LinearSystemTab.cpp  LinearSystemTab.h  ODETab.cpp  ODETab.h
helpers/: Function.cpp  Function.h
